# emd-paper-notebooks

./: .gitignore  Calibrating-with-BQ.md  Calibrating-with-BQ.py  Colored_noise_test.py  Effect_of_c_on_R_distributions.md  Effect_of_c_on_R_distributions.py  Effect_of_c_on_calibs.md  Ex_Prinz2004.md  Ex_Prinz2004.py  Ex_Prinz2004_aleatoric-is-not-epistemic.md  Ex_Prinz2004_aleatoric-is-not-epistemic.py  Ex_Prinz2004_cannot_calibrate-with-Q.md  Ex_Prinz2004_cannot_calibrate-with-Q.py  Ex_UV.md  Ex_UV.py  Ex_UV_cannot-calibrate-with-Q.md  Ex_UV_cannot-calibrate-with-Q.py  Ex_UV_criteria-comparison.md  Ex_UV_criteria-comparison.py  Ex_UV_criteria-comparison_grid.md  Ex_UV_criteria-comparison_grid.py  Ex_UV_criteria-comparison_review-round1.md  Pedagogical_figures.md  README.md  colored_noise  jb_fixes.py  mdl_uv.md  mdl_uv.py  other_criteria.py  paul_tol_rainbow.py  pyproject.toml  requirements.txt  task_bq.md  task_bq.py  utils.py
config/: __init__.py  base.mplstyle  defaults.cfg  publish.mplstyle
data/: MDL-model-compare  README.md  Rdists-model-compare  criteria-compare-table  criteria-model-compare
viz/: __init__.py  colorscheme.py  emdcmp.py  historical.py  jb_fixes.py
