[tool.poetry]
name = "emd-paper"
version = "0.1.0"
package-mode = false
description = "Code for the EMD falsification paper"
authors = ["Alexandre René <rene@cs.rwth-aachen.de>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
# Dependencies which need to be updated (public URL and/or fixed version)
# - emd-falsify
# - pyloric-simulator
# - colored-noise

python = "^3.10"

#pyloric-simulator = { git = "https://github.com/alcrene/pyloric-network-simulator.git", tag = "v0.1.0" }
#colored-noise = { git = "git@github.com:alcrene/colored-noise.git" }
#emd-falsify = "1.0.2"
#emdcmp = { git = "https://github.com/alcrene/emdcmp.git", tag = "v1.1.0-rc.1" }
emdcmp = "1.1.0"
pyloric-network-simulator = "0.1.1"
valconfig = ">=0.1.2-rc3"

numpy = ">=1.21,<2"      # numpy.typing.NDArray
scipy = ">=1.7"       # integrate.simpson changed name (used to be 'simps')
matplotlib = ">=3.10"  # 3.4 adds supylabel. 3.6 allows to configure supylabel with rcparams
seaborn = "*"
pandas = "*"
pydantic = ">=1.8.2"
tqdm = "*"
addict = "*"
more-itertools = "*"
joblib = "*"
"flufl.lock" = "*"         # Used by pyloric-simulator to lock its initialization cache
pint = ">=0.24.4"          # A bug in 0.24.3 prevents importing Pint (frozen dataclass can’t inherit from nonfrozen)
tabulate = "*"

# For executing notebooks
jupytext = "*"
ipykernel = "*"
ipywidgets = "*"  # Required for widgets like progress bars
holoviews = ">=1.15.3"
bokeh = "*"
myst-nb = "^1.0.0"
sphinx-proof = { git = "https://github.com/executablebooks/sphinx-proof.git" }
#jupyter_bokeh  # Install in environment containing Jupyter server
# For bokeh export to png (also used by holoviews)
selenium = "*"
phantomjs = "*"
pillow = "*"

# Recording parameters and results
smttask = ">=0.2.0rc2"
scityping = ">=0.6.5rc2"
texsoup = "^0.3.1"

# [[tool.poetry.source]]
# name = "TestPyPI"
# url = "https://test.pypi.org/simple/"
# priority = "supplemental"
sphinxcontrib-mermaid = "^0.9.2"
num2words = "^0.5.13"
dynesty = "^2.1.5"
arviz = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
